crates/service/tests/completion/snapshots/features__completion__ty_decl__sub_type_with_paren.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "func",
    "kind": 14
  },
  {
    "label": "struct",
    "kind": 14
  },
  {
    "label": "array",
    "kind": 14
  }
]
