crates/service/tests/completion/snapshots/features__completion__ty_decl__sub_type_without_paren.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 8
  },
  {
    "label": "final",
    "kind": 14
  }
]
