crates/service/tests/completion/snapshots/features__completion__ty_decl__super_type_candidates.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8
  },
  {
    "label": "$b",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8
  },
  {
    "label": "$c",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8
  },
  {
    "label": "3",
    "kind": 8
  },
  {
    "label": "final",
    "kind": 14
  }
]
